# Tratamiento_Datos

./: README.md  aemet_coruña.db  graficas.py  limpieza_datos.py  meteorologia.db  pyproject.toml  quepasaaaaaaa.txt
test/: verificacion_base.py
